# word2vec-api

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Readme.md  TODO.md
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  rust-grcov.yml  rust.yml
src/: lib.rs  main.rs
tests/: test_rocket_routes.rs
