[package]
name = "word2vec-api"
version = "0.1.0"
authors = ["jayay <meine-adresse@live.de>"]
edition = "2018"

[lib]
name = "word2vec_api_lib"
path = "src/lib.rs"


[dependencies]
rocket = "^0.4.7"

[dependencies.word2vec]
version = "0.3.2"
default-features = false 
features = ["simd"]

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]

[patch.crates-io]
word2vec = { git = 'https://github.com/jayay/word2vec', branch = 'simd' }

[dev-dependencies]
serde_json = "^1.0.65"
serde = { version = "^1.0", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
