[package]
name = "word2vec-api"
version = "0.1.0"
authors = ["jayay <meine-adresse@live.de>"]
edition = "2018"

[lib]
name = "word2vec_api_lib"
path = "src/lib.rs"


[dependencies]
rocket = {version = "^0.5.0-rc.4", features=["json"]}

[dependencies.word2vec]
version = "0.3.2"
default-features = false 
features = ["simd"]

[patch.crates-io]
word2vec = { git = 'https://github.com/jayay/word2vec', branch = 'simd' }

[dev-dependencies]
serde_json = "^1.0.107"
serde = { version = "^1.0", features = ["derive"] }
tokio = "^1.32.0"

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = 'fat'
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
